// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Chord should render a half note 1`] = `
Array [
  <ellipse
    className="note__head"
    cx={50}
    cy={123}
    fill="white"
    mask="url(#hollowNoteHeadMaskLEFT)"
    rx={15}
    ry={11}
  />,
  <rect
    className="staff__line"
    height={91}
    width={4}
    x={62}
    y={29}
  />,
]
`;

exports[`Chord should render a single Note 1`] = `
Array [
  <ellipse
    className="note__head"
    cx={50}
    cy={123}
    fill="white"
    rx={15}
    ry={11}
  />,
  <rect
    className="staff__line"
    height={91}
    width={4}
    x={62}
    y={29}
  />,
]
`;

exports[`Chord should render two adjacent nodes as neighbors 1`] = `
Array [
  <ellipse
    className="note__head"
    cx={50}
    cy={171}
    fill="white"
    rx={15}
    ry={11}
  />,
  <ellipse
    className="note__head"
    cx={50}
    cy={123}
    fill="white"
    rx={15}
    ry={11}
  />,
  <rect
    className="staff__line"
    height={151}
    width={4}
    x={62}
    y={113}
  />,
  <ellipse
    className="note__head"
    cx={78}
    cy={111}
    fill="white"
    rx={15}
    ry={11}
  />,
]
`;

exports[`Chord should use the stem side of the top-most node for the entire chord 1`] = `
Array [
  <rect
    className="staff__line"
    height={223}
    width={4}
    x={50}
    y={41}
  />,
  <ellipse
    className="note__head"
    cx={66}
    cy={171}
    fill="white"
    rx={15}
    ry={11}
  />,
  <rect
    className="staff__line"
    height="1"
    width={40}
    x={46}
    y={38}
  />,
  <ellipse
    className="note__head"
    cx={66}
    cy={39}
    fill="white"
    rx={15}
    ry={11}
  />,
]
`;

exports[`Staff should render a half note 1`] = `
Array [
  <ellipse
    className="note__head"
    cx={50}
    cy={123}
    fill="white"
    mask="url(#hollowNoteHeadMaskLEFT)"
    rx={15}
    ry={11}
  />,
  <rect
    className="staff__line"
    height={91}
    width={4}
    x={62}
    y={29}
  />,
]
`;

exports[`Staff should render a single chord 1`] = `
<div
  className="staff"
>
  <svg
    className="staff"
    height="300"
    width={250}
    xmlns="http://www.w3.org/2000/svg"
  >
    <mask
      id="hollowNoteHeadMaskLEFT"
      maskContentUnits="objectBoundingBox"
      maskUnits="objectBoundingBox"
    >
      <rect
        fill="white"
        height="1"
        width="1"
        x="0"
        y="0"
      />
      <ellipse
        cx=".5"
        cy=".5"
        fill="black"
        rx=".25"
        ry=".4"
        transform="rotate(40, .5, .5)"
      />
    </mask>
    <mask
      id="hollowNoteHeadMaskRIGHT"
      maskContentUnits="objectBoundingBox"
      maskUnits="objectBoundingBox"
    >
      <rect
        fill="white"
        height="1"
        width="1"
        x="0"
        y="0"
      />
      <ellipse
        cx=".5"
        cy=".5"
        fill="black"
        rx=".25"
        ry=".4"
        transform="rotate(-40, .5, .5)"
      />
    </mask>
    <rect
      className="staff__line"
      height="1"
      width={250}
      x={0}
      y={62}
    />
    <rect
      className="staff__line"
      height="1"
      width={250}
      x={0}
      y={86}
    />
    <rect
      className="staff__line"
      height="1"
      width={250}
      x={0}
      y={110}
    />
    <rect
      className="staff__line"
      height="1"
      width={250}
      x={0}
      y={134}
    />
    <rect
      className="staff__line"
      height="1"
      width={250}
      x={0}
      y={158}
    />
    <ellipse
      className="note__head"
      cx={50}
      cy={123}
      fill="white"
      rx={15}
      ry={11}
    />
    <rect
      className="staff__line"
      height={91}
      width={4}
      x={62}
      y={29}
    />
  </svg>
</div>
`;

exports[`Staff should render empty staff 1`] = `
<div
  className="staff"
>
  <svg
    className="staff"
    height="300"
    width={100}
    xmlns="http://www.w3.org/2000/svg"
  >
    <mask
      id="hollowNoteHeadMaskLEFT"
      maskContentUnits="objectBoundingBox"
      maskUnits="objectBoundingBox"
    >
      <rect
        fill="white"
        height="1"
        width="1"
        x="0"
        y="0"
      />
      <ellipse
        cx=".5"
        cy=".5"
        fill="black"
        rx=".25"
        ry=".4"
        transform="rotate(40, .5, .5)"
      />
    </mask>
    <mask
      id="hollowNoteHeadMaskRIGHT"
      maskContentUnits="objectBoundingBox"
      maskUnits="objectBoundingBox"
    >
      <rect
        fill="white"
        height="1"
        width="1"
        x="0"
        y="0"
      />
      <ellipse
        cx=".5"
        cy=".5"
        fill="black"
        rx=".25"
        ry=".4"
        transform="rotate(-40, .5, .5)"
      />
    </mask>
    <rect
      className="staff__line"
      height="1"
      width={100}
      x={0}
      y={62}
    />
    <rect
      className="staff__line"
      height="1"
      width={100}
      x={0}
      y={86}
    />
    <rect
      className="staff__line"
      height="1"
      width={100}
      x={0}
      y={110}
    />
    <rect
      className="staff__line"
      height="1"
      width={100}
      x={0}
      y={134}
    />
    <rect
      className="staff__line"
      height="1"
      width={100}
      x={0}
      y={158}
    />
  </svg>
</div>
`;
